# ReproMath

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: cli-reference.md  contributing.md  figure-recipes.md  index.md  latex-qa.md  low-rank-tensor-pde-showcase.md  notebook-qa.md  notebook-scaffold.md  project-metadata.md  quickstart.md  release-checklist.md  showcase-low-rank-tensor-pde.md
examples/low-rank-tensor-pde/: README.md  repromath.toml
examples/low-rank-tensor-pde/figures/: singular-value-decay.md  singular-value-decay.py  storage-vs-rank.md  storage-vs-rank.py  tensor-unfolding.md  tensor-unfolding.py
examples/low-rank-tensor-pde/notebooks/: truncated-hosvd.ipynb
examples/low-rank-tensor-pde/reports/: latex_qa.json  latex_qa.md  notebook_qa.json  notebook_qa.md  notebook_qa__notebook_truncated_hosvd.json  project_qa.json  project_qa.md
examples/low-rank-tensor-pde/sources/: README.md
examples/low-rank-tensor-pde/thesis/: main.tex
src/repromath/: __init__.py  cli.py  config.py  project_init.py  project_qa.py
src/repromath/figures/: __init__.py  convergence.py  registry.py  scaffold.py  storage.py  svd.py  tensor.py
src/repromath/latex/: __init__.py  compile.py  parse_log.py  report.py
src/repromath/notebook/: __init__.py  execute.py  qa.py  scaffold.py  sections.py
src/repromath/provenance/: __init__.py  schema.py
tests/: test_cli.py  test_config.py  test_figures.py  test_latex_log_parser.py  test_notebook_qa.py  test_notebook_scaffold.py  test_project_qa.py
(+2 files in other folders)
