[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repromath"
version = "0.1.0"
description = "A lightweight CLI toolkit for reproducible mathematical research projects."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "ReproMath contributors" }
]
keywords = [
  "mathematics",
  "reproducibility",
  "latex",
  "jupyter",
  "scientific-computing"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "matplotlib>=3.8",
  "nbclient>=0.8",
  "nbformat>=5.0",
  "numpy>=1.26",
  "tomli>=2; python_version<'3.11'"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
repromath = "repromath.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.setuptools.packages.find]
where = ["src"]
